Guardamos la opcion de cupones de descuento usando arrays con objetos y usando if

--- a/Taller_2_descuentos/descuentos.html
+++ b/Taller_2_descuentos/descuentos.html
@@ -19,10 +19,10 @@
                     Escribe el precio de tu producto
                 </label>
                 <input id="inputPrice" type="number">
-                <label for="inputDiscount">
-                    Escribe el descuento por aplicar.
+                <label for="inputCupon">
+                    Escribe tu cupon de descuento ⭐ 💲💚.
                 </label>
-                <input id="inputDiscount" type="number">
+                <input id="inputCupon" type="text">
                 <button type="button" onclick="onClickButtonPriceDescount()">
                     Obtener Precio Final con Descuento
                 </button>
