--- a/Taller_2_descuentos/descuentos.html
+++ b/Taller_2_descuentos/descuentos.html
@@ -20,7 +20,7 @@
                 </label>
                 <input id="inputPrice" type="number">
                 <label for="inputDiscount">
-                    Escribe el descuento por aplicar.
+                    Escribe tu codigo  descuento por aplicar.
                 </label>
                 <input id="inputDiscount" type="number">
                 <button type="button" onclick="onClickButtonPriceDescount()">
